feat: adding files before final test